fix(toolbar): focus indicator is cropped

--- a/packages/fluent/scss/toolbar/_layout.scss
+++ b/packages/fluent/scss/toolbar/_layout.scss
@@ -150,12 +150,6 @@
         }
     }
 
-    // Workaround for scrollable scenario with buttons inside badge container
-    .k-toolbar-items-scroll:has(.k-badge-container) {
-        padding-block-start: .5em;
-        margin-block-start: -.5em;
-    }
-
     .k-toolbar-items-list {
         display: flex;
         flex-flow: row wrap;
@@ -202,7 +196,21 @@
             --kendo-toolbar-padding-y: var( --kendo-toolbar-#{$size}-padding-y, #{$_padding-y} );
             --kendo-toolbar-spacing: var( --kendo-toolbar-#{$size}-spacing, #{$_spacing} );
             --kendo-toolbar-separator-height: var( --kendo-toolbar-#{$size}-separator-height, #{$_separator-height} );
+
+            .k-toolbar-items-scroll {
+                padding-block: var( --kendo-toolbar-#{$size}-padding-y, #{$_padding-y} );
+                margin-block: calc( var( --kendo-toolbar-#{$size}-padding-y, #{$_padding-y} ) * -1 );
+                padding-inline: var( --kendo-toolbar-#{$size}-padding-x, #{$_padding-x} );
+                margin-inline: calc( var( --kendo-toolbar-#{$size}-padding-x, #{$_padding-x} ) * -1 );
+            }
+
+            &.k-toolbar-scrollable-overlay .k-toolbar-items-scroll:only-child,
+            .k-toolbar-items-scroll:not(:only-child) {
+                padding-inline-end:0;
+                margin-inline-end: 0;
+            }
         }
+
     }
 
     // Remove once we decide to not size empty containers
